2007-10-31  Karsten Bräckelmann  <guenther@rudersport.de>

	* www.gnome.org/projects/garnome/: 2.21.1 is out, new unstable branch

2007-10-29  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/contact/index.wml: added brazilian contact info.

2007-10-25  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/developer.shtml:
	* www.gnome.org/projects/evolution/meeting-logs/2007-10-24.shtml:
	Add IRC meeting log from 2007-10-24.

2007-10-17  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/index.shtml:
	Fix an alignment issue.

2007-10-17  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/meeting-logs/2007-09-26.shtml:
	* www.gnome.org/projects/evolution/meeting-logs/2007-10-03.shtml:
	* www.gnome.org/projects/evolution/meeting-logs/2007-10-10.shtml:
	Changes look good; apply them to the other meeting logs.

2007-10-17  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/head.shtml:
	* www.gnome.org/projects/evolution/meeting-logs/2007-10-17.shtml:
	Attempt to generate more correct XHTML code for meeting logs.

2007-10-17  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/developer.shtml:
	* www.gnome.org/projects/evolution/meeting-logs/2007-10-17.shtml:
	Add IRC meeting log from 2007-10-17.

2007-10-16  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/htaccess: fix typo in /start/unstable redirect
	* www.gnome.org/start/schedule-unstable.ics: update for 2.21

2007-10-16  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/doc/evolution212.pdf:
	* www.gnome.org/projects/evolution/doc/Makefile.am:
	* www.gnome.org/projects/evolution/documentation.shtml:
	Add a User Manual for version 2.12 and a link to the FAQ.

2007-10-15  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/download.shtml:
	Update latest stable version (2.12.1).

2007-10-14  Ricky Zhou <ricky.zhou@gmail.com>
