@@ -6,7 +6,7 @@
   padding: 0;
   height: 96px;
   overflow: hidden;
-  }
+}
 
 #header h1
 {
@@ -15,7 +15,7 @@
   background-position: top right;
   padding-top: 128px;
   margin: 0;
-  }
+}
 
 #body {
   margin: 0px 10px 0px 10px;
@@ -49,7 +49,7 @@
   background-repeat: no-repeat;
   background-position: 1ex 1ex;
   height: 96px;
-  }
+}
 
 #menu h2
 {
@@ -57,36 +57,36 @@
   margin: 0 0 0 0;
   height: 44px;
   visibility: hidden;
-  }
+}
 
 #menu > ul
 {
   margin-left: 48px;
   display: block;
-  }
+}
 
 #menu ul ul, #menu li, #menu a
 {
   display: inline;
   padding: 0;
   margin: 0;
-  }
+}
 
 #menu .current > a
 {
   font-weight: bold;
-  }
+}
 
 #menu a
 {
   color: black;
-  }
+}
 
 #menu li li:before
 {
   content: "·";
   margin: 0.5ex;
-  }
+}
 
 #copyright
 {
@@ -94,12 +94,12 @@
   clear:both;
   background:#efefef;
   padding:10px;
-  }
+}
 
 #copyright p
 {
   text-align:center;
-  }
+}
 
 /* three column layout */
 
@@ -141,42 +141,61 @@
 #left {
   width:48%;
   float:left;
-  }
+}
 
 #right {
   width:48%;
   float:right;
-  }
+}
 
 div.code {
   background-color: #e0e0e0;
   color: #000000;
   white-space: pre;
   font-family: monospace;
-  }
+}
 
 .download a {
   text-decoration: none;
   font-weight: bold;
   color: blue;
   vertical-align: middle;
-  }
+}
 
 .download p {
   padding-left: 36px;
-  }
+}
 
 .download {
   padding-left: 36px;
   border-top: 1px solid #99c;
-  }
+}
 
 .iconl {
   float:left;
   margin: 5px 5px 5px 5px;
-  }
+}
 
 .iconr {
   float:right;
   margin: 5px 5px 5px 5px;
-  }
+}
+
+#warningbox {
+  background-image:url(../../images/dialog-warning.png);
+  background-repeat:no-repeat;
+  border: solid 1px #4e9a06;
+  background-color:#73d216;
+  background-position:2px 2px;
+  padding:2px;
+  overflow:visible;
+  margin-left: 2em;
+  margin-right: 2em;
+}
+
+#warningbox p {
+  margin-left:64px;
+  margin-right:64px;
+  margin-top:10px;
+  margin-bottom:20px;
+}
