@@ -35,6 +35,22 @@
         <a href="screenshots.html"> <img src="data/images/cheese-big.png" alt="cheese!"/> </a>
       </div><!-- top -->
 
+      <div id="warningbox">
+        <p>
+        Dear Cheese user!<br/>
+        We are constantly trying to support more and more webcams. Therefore we
+        need YOUR help! Yeah, exactly, we mean YOU! Got 5 minutes spare time?
+        Please <a href="detect.py">download this small python script</a>, start
+        HAL, attach your webcam and run it. The output, which is a
+        <a href="http://people.freedesktop.org/~david/hal-spec/hal-spec.html#spec-device-info">HAL-fdi</a>
+        file, should be send to
+        <a href="mailto:patrys@pld-linux.org?subject=detect.py output for Cheese">Patryk Zawadzki</a>,
+        who then will enhance the webcam-handling in Cheese by using HAL.<br/>
+        Thanks a lot! 
+
+        </p>
+      </div>
+
       <div id="bottom">
         <div id="bottomLeft">
           <div id="bottomLeftLeft">
