@@ -1,3 +1,12 @@
+2007-11-12  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/data/images/dialog-warning.png,
+	  www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
+	  www.gnome.org/projects/cheese/detect.py,
+	  www.gnome.org/projects/cheese/index.html,
+	  www.gnome.org/projects/cheese/Makefile.am: 
+	  add a new banner on the cheese page
+
 2007-10-31  Karsten Bräckelmann  <guenther@rudersport.de>
 
 	* www.gnome.org/projects/garnome/: 2.21.1 is out, new unstable branch
